@@ -51,6 +51,7 @@ menu.next.1 = key Tab
 menu.pause.1 = key Pause
 menu.pause.2 = key F1
 menu.exit.1 = key F10
+menu.fullscreen.1 = key F11
 menu.special.1 = key LeftAlt
 menu.special.2 = key RightAlt
 
