@@ -42,6 +42,7 @@ enum {
 	KEY_EXIT,
 	KEY_ABORT,
 	KEY_DEBUG,
+	KEY_FULLSCREEN,
 	KEY_MENU_UP,
 	KEY_MENU_DOWN,
 	KEY_MENU_LEFT,
