@@ -22,6 +22,6 @@
 #include "libs/graphics/sdl/sdl_common.h"
 
 int TFB_Pure_InitGraphics (int driver, int flags, int width, int height);
-int TFB_Pure_ConfigureVideo (int driver, int flags, int width, int height);
+int TFB_Pure_ConfigureVideo (int driver, int flags, int width, int height, int togglefullscreen);
 
 #endif
